--- a/_config_production.yml
+++ b/_config_production.yml
@@ -23,7 +23,7 @@ email: jmankoff@acm.org
 description: >- # this means to ignore newlines until "baseurl:"
   The website for the Accessibility Futures Workshop. Join us in exploring future directions for accessibliity research
 baseurl: "/a11yfutures" # the subpath of your site, e.g. /blog
-# url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://make4all.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jcmankoff
 github_username:  jmankoff
 
