updated to reflect latest version of workshop paper

--- a/_config.yml
+++ b/_config.yml
@@ -42,22 +42,31 @@ plugins:
 #
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+   - .sass-cache/
+   - .jekyll-cache/
+   - gemfiles/
+   - Gemfile
+   - Gemfile.lock
+   - node_modules/
+   - vendor/bundle/
+   - vendor/cache/
+   - vendor/gems/
+   - vendor/ruby/
+   - README.md
+   - feed.xml
+   - laloyd/
+
+assets:
+    digest: false
+    prefix: "/assets"
+    sources:
+        - "*"
+
 
 nav-links:
   - name: Home
-    url: /
+    url: /a11yfutures/
   - name: Team
-    url: /team
+    url: /a11yfutures/team/
   
