--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,14 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
   - jekyll-remote-theme
+  - jekyll-toc
 
+defaults:
+  - scope:
+      path: ""
+    values:
+      toc: true
+      
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -57,6 +64,9 @@ exclude:
    - feed.xml
    - laloyd/
 
+kramdown:
+  toc_levels: '1'
+
 assets:
     digest: false
     prefix: "/assets"
@@ -69,4 +79,8 @@ nav-links:
     url: /a11yfutures/
   - name: Team
     url: /a11yfutures/team/
+  - name: Submissions
+    url: /a11yfutures/submissions/
+  - name: Schedule
+    url: /a11yfutures/schedule/
   
